--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.1.1",
     "daisyui": "^4.4.24",
-    "vue": "^3.3.11"
+    "vue": "^3.3.11",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
