--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.1.1",
     "daisyui": "^4.4.24",
+    "rollup-plugin-gzip": "^3.1.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
