--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5173",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.12.1",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.1.1",
     "daisyui": "^4.4.24",
+    "mongodb": "^6.3.0",
     "rollup-plugin-gzip": "^3.1.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
