--- a/package.json
+++ b/package.json
@@ -7,25 +7,33 @@
     "dev": "vite --port 5173",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "build:ts": "tsc"
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.1.1",
+    "clickhouse": "^2.6.0",
     "daisyui": "^4.4.24",
     "mongodb": "^6.3.0",
+    "openmeteo": "^1.1.3",
     "rollup-plugin-gzip": "^3.1.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.19",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-vue": "^4.5.2",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3",
     "vite": "^5.0.10"
   }
 }
