--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -14,9 +14,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose-unique-validator": "^4.0.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3"
   }
 }
