Feat: add quill text editor

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/vue": "^2.1.1",
     "daisyui": "^4.4.24",
     "mongodb": "^6.3.0",
+    "quill": "^2.0.2",
     "rollup-plugin-gzip": "^3.1.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
