--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -13,13 +13,15 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csv-parser": "^3.1.0",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose-unique-validator": "^4.0.0",
+    "mongoose-unique-validator": "^5.0.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "sharp": "^0.33.5"
   }
 }
