Feat: add dynamic tags for sharing articles on social media

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^3.12.1",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.1.1",
+    "@vueuse/head": "^2.0.0",
     "@vueuse/sound": "^2.0.1",
     "daisyui": "^4.4.24",
     "mongodb": "^6.12.0",
